--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest",
     "clean": "rm -rf dist",
     "prebuild": "yarn run clean",
-    "build": "tsc"
+    "build": "tsc",
+    "prepublishOnly": "yarn run build",
+    "postpublish": "git push --tags"
   },
   "peerDependencies": {
     "rxjs": "^7.1.0"
@@ -19,5 +21,8 @@
     "rxjs": "^7.1.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.2"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
