--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@benkeil/typescript-commons-lang",
   "version": "0.0.1",
-  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "test": "jest",
@@ -24,5 +23,7 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts"
 }
